Fix caption size on mobile markup

--- a/src/components/Caption/Caption.module.css
+++ b/src/components/Caption/Caption.module.css
@@ -7,14 +7,9 @@
   text-align: center;
   font-weight: 700;
   font-size: 14px;
+  word-break: break-all;
   color: var(--color-text);
 }
-
-/* .wrapper * {
-  padding: 0;
-  color: var(--color-text);
-  font-weight: 700;
-} */
 
 @media tablet {
   .wrapper {
