--- a/src/components/Card/Card.module.css
+++ b/src/components/Card/Card.module.css
@@ -2,7 +2,9 @@
 @value mobile, smartphone, tablet, desktop from sizes;
 
 .card {
+  width: 100%;
   padding: 10px;
+  border-radius: 10px;
   background-color: var(--color-light);
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -15,5 +17,6 @@
 @media tablet {
   .card {
     flex-basis: calc((100% - 30px) / 2);
+    height: 100%;
   }
 }
